k8s-config/apache-php.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: magento
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: magento
        tier: frontend
    spec:
      securityContext:
        fsGroup: 82
      containers:
        - image: eu.gcr.io/magento2-269418/magento2-apache24:$TAG_NAME
          name: apache
          ports:
            - containerPort: 80
              name: apache
          volumeMounts:
          - mountPath: /var/www/html
            name: magento-shared
        - image: eu.gcr.io/magento2-269418/magento2-php72:$TAG_NAME
          name: php
          ports:
            - containerPort: 9000
              name: php
          volumeMounts:
          - mountPath: /var/www/html
            name: magento-shared
          - mountPath: /var/www/html/media
            name: magento-persistent-storage
            subPath: media
          - mountPath: /var/www/html/var
            name: magento-persistent-storage
            subPath: var  
          lifecycle:
            postStart:
              exec:   
                command: ["/bin/sh", "-c", "mv /var/www/magento/* /var/www/html"]
        volumes:
      - name: magento-shared
        emptyDir: {}
      - name: magento-persistent-storage
        persistentVolumeClaim:
          claimName: magento-pv-claim
