k8s-config/nfs.yml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: eu.gcr.io/magento2-269418/nfs-server-alpine:1
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111 
        resources:
          requests:
            cpu: 1 # 500 millicpus
          limits:
            cpu: 1    # 1 cpu
        volumeMounts:
          - mountPath: /data
            name: nfs-pvc
        securityContext:
          privileged: true
      nodeSelector: 
        private-nfs-pool: nfs-drive
      volumes:
        - name: nfs-pvc
          gcePersistentDisk:
            pdName: nfs-disk
            fsType: ext4
