k8s-config/temp-apache-php.yml
apiVersion: v1
kind: Service
metadata:
  name: magento
  annotations:
    #cloud.google.com/app-protocols: '{"mage-https-port":"HTTPS", "mage-http-port":"HTTP"}'
    #cloud.google.com/app-protocols: '{"mage-https-port":"HTTPS","mage-http-port":"HTTP"}'
    cloud.google.com/app-protocols: '{"mage-https-port":"HTTP2"}'
spec:
  type: NodePort
  selector:
    app: magento
  ports:
  - name: mage-https-port
    port: 443
    protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: magento-ingress
  #annotations: 
  #  kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: wwwmage-secret
  - secretName: staticmage-secret
  rules:
  - host: www.mage.xyz
    http:
      paths:
      - backend:
          serviceName: magento
          servicePort: mage-https-port
  - host: static.mage.xyz
    http:
      paths:
      - backend:
          serviceName: magento
          servicePort: mage-https-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
  labels:
    app: magento
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: magento
  template:
    metadata:
      labels:
        app: magento
    spec:
      securityContext:
        supplementalGroups:
          - 82
        fsGroup: 82
      containers:
        - image: eu.gcr.io/magento2-269418/magento2-apache24:399
          name: apache
          ports:
            - containerPort: 80
              name: apache
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "256Mi"
              cpu: "350m"
          volumeMounts:
          - mountPath: /var/www/html/pub
            name: magento-pub-volume
            subPath: pub
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 80
            failureThreshold: 1
            periodSeconds: 50
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 80
            failureThreshold: 1
            periodSeconds: 50
            timeoutSeconds: 3
        - image: eu.gcr.io/magento2-269418/magento2-php72:399
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "/var/www/html/post.sh"]
          name: php
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9000
              name: php
          volumeMounts:
          - mountPath: /var/www/html/pub
            name: magento-pub-volume
            subPath: pub
          - mountPath: /var/www/html/var
            name: magento-var-volume
            subPath: var   
      nodeSelector: 
        private-app-pool: web-app
      volumes:
      - name: magento-pub-volume
        persistentVolumeClaim:
          claimName: nfs-pvc-1
      - name: magento-var-volume
        persistentVolumeClaim:
          claimName: nfs-pvc-2
